# klene

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  klene.desktop  pyproject.toml
marketing/: bentreder-klene-page-copy.md  bentreder-klene-page.html
scripts/: install-desktop-entry.sh  install-local-shortcuts.sh
src/klene/: __init__.py  __main__.py  cleaner.py  cli.py  commands.py  doctor.py  gui.py  gui_launcher.py  logging_config.py  metadata.py  models.py  safety.py  scanner.py  utils.py
tests/: test_commands.py  test_doctor.py  test_metadata.py  test_platforms.py  test_safety.py  test_utils.py
