[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klene"
version = "0.2.0"
description = "Safe cleanup utility for Linux and Windows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Klene Contributors" }
]
dependencies = [
  "typer>=0.12,<1.0",
  "rich>=13.0,<14.0",
  "PySide6>=6.7,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0",
]

[project.scripts]
klene = "klene.gui_launcher:main"
klene-cli = "klene.cli:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
klene = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
